# cShot

./: .env.example  .gitignore  AUDIT_REPORT.md  DEMO_NOTES.md  README.md  ROADMAP-TO-PROFIT.md  app.py  cshot  gen.py  index.html  install.sh  package-lock.json  package.json  pyproject.toml  ratings.jsonl  requirements.txt  tailwind.config.js  taste_profile.json
.claude/: agent-edit-log.md  settings.json
docs/: ALPHA-POSTMORTEM-TEMPLATE.md  ARCHITECTURE-REVIEW.md  BETA-DIRECTION.md  BETA_RELEASE_NOTES.md  BETA_SCOPE.md  BETA_SHIP_CHECKLIST.md  BUILD-STARTER-CONTEXT.md  CLOUD_ARCH.md  COPYRIGHT-SAFETY.md  DATASET-POLICY.md  DEMO-ASSETS.md  DEMO-WALKTHROUGH.md  (+102 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cleanup.rs  commands.rs  embeddings.rs  favorites.rs  feedback.rs  generator.rs  history.rs  integrity.rs  lib.rs  main.rs  prompt.rs  prompt_dsp.rs  quality.rs  score.rs  semantic_library.rs
src-tauri/src/audio/: analysis_cache.rs  analyze.rs  audio_intelligence.rs  creative_intent.rs  dsp.rs  evolution.rs  humanize.rs  hybrid.rs  identity.rs  instrument.rs  io.rs  midi.rs  mock.rs  mod.rs  morph.rs  mutation.rs  one_shot_controls.rs  packs.rs  params.rs  process.rs  recreate.rs  resynthesize.rs  sculpt.rs  session.rs  sound_designer.rs  spec.rs  spectral_edit.rs  spectral_intelligence.rs  stress_test.rs  synthesize.rs  taste.rs  transform.rs  validate.rs  waveform.rs  workflow.rs
src-tauri/src/db/: mod.rs
src-tauri/src/generation/: bakeoff.rs  mock.rs  mod.rs  placeholder_audioldm.rs  placeholder_elevanlabs.rs  placeholder_stableaudio.rs  provider.rs  registry.rs  validator.rs
src-tauri/src/storage/: paths.rs
src-tauri/tests/: audio_tests.rs
(+56 files in other folders)
