[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cshot"
version = "0.2.0"
description = "AI one-shot pack generator — generate, refine, rank, export producer-ready samples"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "soundfile>=0.12",
    "tqdm>=4.64",
]

[project.optional-dependencies]
ui = ["gradio>=4.0"]

[project.scripts]
cshot = "gen.cli:main"

[tool.setuptools.packages.find]
include = ["gen*"]
