[package]
default-run = "cshot"
name = "cshot"
version = "0.1.0"
edition = "2024"

[features]
default = []

[lib]
name = "cshot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cshot-cli"
path = "src/bin/cshot-cli.rs"

[[bin]]
name = "cshot-plugin"
path = "src/bin/cshot_plugin.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
zip = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
minimp3 = "0.5"
symphonia = { version = "0.5", default-features = false, features = ["mp3"] }
dotenvy = "0.15"
base64 = "0.22"
sha2 = "0.10"
tokio = { version = "1", features = ["time"] }
